# git-backup

./: .gitignore  Cargo.toml  Makefile  README.md  git_sync_config.yaml  git_sync_config.yaml.example
.devcontainer/: devcontainer.json
src/: config.rs  git.rs  main.rs  repo.rs
src/providers/: github.rs  gitlab.rs  individual.rs  mod.rs  shared.rs
